# location-tracker

./: .gitignore  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  build.sh  cookie_store.py  dashboard.py  db.py  docker-compose.yml  get_cookies.py  intelligence.py  location_history.db-shm  location_history.db-wal  main.py  providers.py  pyproject.toml  road_snap.py  setup.sh  tracker.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  publish.yml
man/: location-tracker.1
static/: app.js  style.css
templates/: index.html
tests/: test_cookie_store.py  test_dashboard.py  test_db.py  test_intelligence.py  test_tracker.py
