[project]
name = "location-tracker"
version = "0.2.0"
description = "Track and visualize location history on an interactive map with timeline controls"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "folium>=0.20.0",
    "locationsharinglib>=5.0.3",
    "pandas>=3.0.3",
    "playwright>=1.60.0",
    "playwright-stealth>=2.0.3",
    "schedule>=1.2.2",
    "cryptography>=44.0",
    "flask>=3.1.0",
]

[project.optional-dependencies]
build = ["pyinstaller>=6.0"]
dev = ["ruff>=0.11", "pytest>=8.0", "pip-audit>=2.7"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[project.scripts]
location-tracker = "main:cli"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "S"]
ignore = ["S603", "S607", "S108", "S105", "S101", "S311"]

[tool.ruff.lint.per-file-ignores]
"tracker.py" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
