[project]
name = "location-tracker"
version = "1.5.0"
description = "Self-hosted location tracking dashboard with encrypted cookies, SQLite storage, and adaptive polling"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "David Condrey", email = "davidcondrey@me.com" }]
keywords = ["location", "tracking", "google-maps", "dashboard", "self-hosted", "geolocation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "folium>=0.20.0",
    "locationsharinglib>=5.0.3",
    "pandas>=3.0.3",
    "playwright>=1.60.0",
    "playwright-stealth>=2.0.3",
    "schedule>=1.2.2",
    "cryptography>=44.0",
    "flask>=3.1.0",
]

[project.urls]
Homepage = "https://github.com/dcondrey/location-tracker"
Repository = "https://github.com/dcondrey/location-tracker"
Issues = "https://github.com/dcondrey/location-tracker/issues"

[project.optional-dependencies]
build = ["pyinstaller>=6.0"]
dev = ["ruff>=0.11", "pytest>=8.0", "pip-audit>=2.7"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
exclude = [
    ".github/",
    "tests/",
    "browser_profile/",
    "build.sh",
    "setup.sh",
    "uv.lock",
    ".gitignore",
    ".python-version",
    "CONTRIBUTING.md",
    "*.enc",
    "*.log",
    "*.pid",
    "*.db",
]

[project.scripts]
location-tracker = "main:cli"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "S"]
ignore = ["S603", "S607", "S108", "S105", "S101", "S311"]

[tool.ruff.lint.per-file-ignores]
"tracker.py" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
